# sinkthing

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: test.rs
src/: lib.rs
src/devices/: mod.rs
src/folders/: mod.rs
src/stats/: device.rs  folder.rs  mod.rs
src/system/: connections.rs  ping.rs
