[package]
name = "sinkthing"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
chrono = { version = "0.4.22", features = ["serde"] }
derivative = "2.2.0"
url = "2.3.1"
reqwest = { version = "0.11.12", default-features = false, features = ["json", "tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.37"
tokio = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
